[package]
name = "coordinator_entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "^0.9.0", default-features = false, features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-chrono"] }
native-tls = { version = "0.2", features = ["vendored"] }
